--- a/package.json
+++ b/package.json
@@ -11,16 +11,16 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~9.1.9",
+    "@angular/animations": "~10.2.5",
     "@angular/cdk": "^9.2.4",
-    "@angular/common": "~9.1.9",
-    "@angular/compiler": "~9.1.9",
+    "@angular/common": "~10.2.5",
+    "@angular/compiler": "~10.2.5",
     "@angular/core": "^10.2.5",
-    "@angular/forms": "~9.1.9",
+    "@angular/forms": "~10.2.5",
     "@angular/material": "^9.2.4",
-    "@angular/platform-browser": "~9.1.9",
-    "@angular/platform-browser-dynamic": "~9.1.9",
-    "@angular/router": "~9.1.9",
+    "@angular/platform-browser": "~10.2.5",
+    "@angular/platform-browser-dynamic": "~10.2.5",
+    "@angular/router": "~10.2.5",
     "bootstrap": "^4.5.3",
     "http-server": "^0.12.3",
     "jquery": "^3.5.1",
@@ -30,16 +30,16 @@
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.901.7",
-    "@angular/cli": "^10.2.1",
-    "@angular/compiler-cli": "~9.1.9",
+    "@angular-devkit/build-angular": "~0.1002.4",
+    "@angular/cli": "^10.2.4",
+    "@angular/compiler-cli": "~10.2.5",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
     "angular-cli-ghpages": "^0.6.2",
-    "codelyzer": "^5.1.2",
+    "codelyzer": "^6.0.2",
     "ghpages": "0.0.10",
-    "jasmine-core": "~3.5.0",
+    "jasmine-core": "^3.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~5.0.0",
     "karma-chrome-launcher": "~3.1.0",
@@ -49,6 +49,6 @@
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~3.8.3"
+    "typescript": "~4.0.8"
   }
 }
